adding construction and some more to readme

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Social Contact - Web Component</title>
 </head>
 <body>
+    <social-contact
+        github="rcasto"
+        linkedin="rcasto">
+    </social-contact>
+
+    <social-contact
+        github="your-github-username"
+        linkedin="your-linkedin-username"
+        twitter="your-twitter-handle"
+        facebook="your-facebook-username">
+    </social-contact>
+
     <social-contact></social-contact>
 
     <script type="module" src="src/social-contact.mjs"></script>
