go back to display flex, add instagram to example in test harness

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         github="your-github-username"
         linkedin="your-linkedin-username"
         twitter="your-twitter-handle"
-        facebook="your-facebook-username">
+        facebook="your-facebook-username"
+        instagram="your-instagram-username">
     </social-contact>
 
     <social-contact></social-contact>
