project improvements and alignment

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
             padding: 6px;
             border: 1px solid black;
         }
+
         .social-contact-container input {
             margin-bottom: 6px;
         }
@@ -21,6 +23,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="social-contact-container">
         <label for="github">GitHub Username</label>
@@ -42,38 +45,40 @@
     </div>
 
     <div class="social-contact-render-location">
-        <social-contact
-            github="rcasto"
-            linkedin="rcasto"></social-contact
-            >
+        <social-contact github="rcasto" linkedin="rcasto"></social-contact>
     </div>
 
-    <script type="module" src="src/social-contact.mjs"></script>
+    <script src="dist/social-contact.js"></script>
     <script>
-        const socialContactRenderContainer = document.querySelector('.social-contact-render-location');
-        let socialContact = document.querySelector('social-contact');
-        
-        // social contact inputs
-        const githubInput = document.querySelector('#github');
-        const linkedinInput = document.querySelector('#linkedin');
-        const twitterInput = document.querySelector('#twitter');
-        const facebookInput = document.querySelector('#facebook');
-        const instagramInput = document.querySelector('#instagram');
+        window.addEventListener('load', () => {
+            customElements.define('social-contact', SocialContact);
 
-        const socialContactRenderButton = document.querySelector('.social-contact-render-button');
+            const socialContactRenderContainer = document.querySelector('.social-contact-render-location');
+            let socialContact = document.querySelector('social-contact');
 
-        socialContactRenderButton.addEventListener('click', () => {
-            socialContact.remove();
+            // social contact inputs
+            const githubInput = document.querySelector('#github');
+            const linkedinInput = document.querySelector('#linkedin');
+            const twitterInput = document.querySelector('#twitter');
+            const facebookInput = document.querySelector('#facebook');
+            const instagramInput = document.querySelector('#instagram');
 
-            socialContact = document.createElement('social-contact');
-            socialContact.setAttribute('github', githubInput.value);
-            socialContact.setAttribute('linkedin', linkedinInput.value);
-            socialContact.setAttribute('twitter', twitterInput.value);
-            socialContact.setAttribute('facebook', facebookInput.value);
-            socialContact.setAttribute('instagram', instagramInput.value);
+            const socialContactRenderButton = document.querySelector('.social-contact-render-button');
 
-            socialContactRenderContainer.appendChild(socialContact);
+            socialContactRenderButton.addEventListener('click', () => {
+                socialContact.remove();
+
+                socialContact = document.createElement('social-contact');
+                socialContact.setAttribute('github', githubInput.value);
+                socialContact.setAttribute('linkedin', linkedinInput.value);
+                socialContact.setAttribute('twitter', twitterInput.value);
+                socialContact.setAttribute('facebook', facebookInput.value);
+                socialContact.setAttribute('instagram', instagramInput.value);
+
+                socialContactRenderContainer.appendChild(socialContact);
+            });
         });
     </script>
 </body>
+
 </html>
