--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/social-contact@1.0.1/dist/social-contact.min.js"></script>
+    <!-- <script src="dist/social-contact.js"></script> -->
+
     <script>
         window.addEventListener('load', () => {
             const socialContactRenderContainer = document.querySelector('.social-contact-render-location');
