make test client script tags async

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <social-contact github="rcasto" linkedin="rcasto"></social-contact>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/social-contact@1.0.1/dist/social-contact.min.js"></script>
-    <!-- <script src="dist/social-contact.js"></script> -->
+    <script async src="https://cdn.jsdelivr.net/npm/social-contact@1.0.1/dist/social-contact.min.js"></script>
+    <!-- <script async src="dist/social-contact.js"></script> -->
 
     <script>
         window.addEventListener('load', () => {
